[package]
name = "particle_detect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
fastrand = "1.8.0"
image = "0.24.3"
imageproc = { git = "https://github.com/image-rs/imageproc", branch = "master" }
nalgebra = "0.31.0"
num-complex = "0.4.2"
opencv = "0.66.0"
