[package]
name = "ellipse_detect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
fastrand = "1.8.0"
image = "0.24.3"
imageproc = { git = "https://github.com/image-rs/imageproc", branch = "master" }
nalgebra = "0.31.0"
num-complex = "0.4.2"
rayon = "1.5.3"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.2"

# For comparisons in examples
[dev-dependencies]
opencv = "0.66.0"

# [profile.release]
# codegen-units = 1
# strip = true
# lto = true
# panic = "abort"
